fix hamburger z-index

--- a/src/App.css
+++ b/src/App.css
@@ -91,10 +91,12 @@ a:hover {
 }
 
 .menu-links {
+  z-index: 1;
+  border-radius: 5px;
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: #fff;
+  background-color: rgb(245, 245, 245);
   width: fit-content;
   max-height: 300px;
   overflow: hidden;
